{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 33,
  "lineage": "09319a0a-8143-9f02-3862-394d387be9e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c360e8dc27d1717",
            "arn": "arn:aws:ec2:us-east-1:987615086900:elastic-ip/eipalloc-00c360e8dc27d1717",
            "domain": "vpc",
            "id": "eipalloc-00c360e8dc27d1717",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-197-86-222.compute-1.amazonaws.com",
            "public_ip": "32.197.86.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d4b5720b87f53d5",
            "arn": "arn:aws:ec2:us-east-1:987615086900:elastic-ip/eipalloc-03d4b5720b87f53d5",
            "domain": "vpc",
            "id": "eipalloc-03d4b5720b87f53d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-235-188-10.compute-1.amazonaws.com",
            "public_ip": "54.235.188.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:internet-gateway/igw-03bd8d14720778291",
            "id": "igw-03bd8d14720778291",
            "owner_id": "987615086900",
            "vpc_id": "vpc-029136a04c6966869"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c360e8dc27d1717",
            "association_id": "eipassoc-088d8c24d86959169",
            "connectivity_type": "public",
            "id": "nat-000de329cbb4b8556",
            "network_interface_id": "eni-01f874edd012934e5",
            "private_ip": "10.0.10.164",
            "public_ip": "32.197.86.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036070bc83d010cc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d4b5720b87f53d5",
            "association_id": "eipassoc-000dd108989d47813",
            "connectivity_type": "public",
            "id": "nat-0b8781100f42868fc",
            "network_interface_id": "eni-07554cabd29cb9238",
            "private_ip": "10.0.11.71",
            "public_ip": "54.235.188.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d64d7cc6664f3b62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:route-table/rtb-0eb2068ea2c08a360",
            "id": "rtb-0eb2068ea2c08a360",
            "owner_id": "987615086900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000de329cbb4b8556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029136a04c6966869"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:route-table/rtb-0e715184a7754f654",
            "id": "rtb-0e715184a7754f654",
            "owner_id": "987615086900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8781100f42868fc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029136a04c6966869"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:route-table/rtb-085497fdbca505887",
            "id": "rtb-085497fdbca505887",
            "owner_id": "987615086900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bd8d14720778291",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029136a04c6966869"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e5df2e9f6d3abb4",
            "route_table_id": "rtb-0eb2068ea2c08a360",
            "subnet_id": "subnet-00625c615b7131994"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af14df00f4b439d8",
            "route_table_id": "rtb-0e715184a7754f654",
            "subnet_id": "subnet-0dc68b7ea54e830d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065718727a22ad5e9",
            "route_table_id": "rtb-085497fdbca505887",
            "subnet_id": "subnet-036070bc83d010cc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08927e9908296e749",
            "route_table_id": "rtb-085497fdbca505887",
            "subnet_id": "subnet-0d64d7cc6664f3b62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:subnet/subnet-00625c615b7131994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00625c615b7131994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987615086900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-029136a04c6966869"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:subnet/subnet-0dc68b7ea54e830d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc68b7ea54e830d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987615086900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-029136a04c6966869"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:subnet/subnet-036070bc83d010cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036070bc83d010cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987615086900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-029136a04c6966869"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:subnet/subnet-0d64d7cc6664f3b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d64d7cc6664f3b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987615086900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-029136a04c6966869"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987615086900:vpc/vpc-029136a04c6966869",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e50440fa05ae4483",
            "default_route_table_id": "rtb-00bb6a4895cc7574c",
            "default_security_group_id": "sg-068c3cebe00aab7df",
            "dhcp_options_id": "dopt-2dc5c156",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029136a04c6966869",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bb6a4895cc7574c",
            "owner_id": "987615086900"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "apps",
            "metadata": [
              {
                "generation": 0,
                "name": "apps",
                "resource_version": "976",
                "uid": "8d0a7f13-6a2e-464e-bd40-eea3e7c7301c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "apps"
          },
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_eks_fargate_profile.fp_datadog_lab",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.fargate_execution",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "data.aws_iam_policy_document.eks_cluster_assume",
            "data.aws_iam_policy_document.fargate_assume"
          ]
        }
      ]
    }
  ]
}